@@ -1,3 +1,8 @@
+2007-03-26  Sterling Augustine  <sterling@tensilica.com>
+	
+	* config/tc-xtensa.c (xg_translate_idioms): Allow assembly idioms
+	in FLIX instructions.
+	
 2007-03-26  Julian Brown  <julian@codesourcery.com>
 
 	* config/tc-arm.c (arm_it): Add immisfloat field.
